manifests/deployment_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-v2
  labels:
    app: my-app-v2
spec:
  replicas: 3
  minReadySeconds: 5
  strategy:
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: my-app-v2
  template:
    metadata:
      labels:
        app: my-app-v2
    spec:
      containers:
      - name: my-container
        image: docker.io/puzle/myrepository:v4
        ports:
        - containerPort: 8000
