manifests/service_v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-v1
spec:
  selector:
    app: my-app-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000  # Порт внутри контейнера
  type: ClusterIP  #ClusterIP LoadBalancer
