manifests/service_v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-v2
spec:
  selector:
    app: my-app-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000  # Порт внутри контейнера
  type: ClusterIP  #ClusterIP LoadBalancer NodePort
