manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: myapp-service-v2/$2
  #  nginx.ingress.kubernetes.io/ssl-redirect: "true"
  #  nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      #- path: /otusapp/(?<student>[^/]+)/(.*)
      #  pathType: ImplementationSpecific
      #  backend:
      #    service:
      #      name: myapp-service-v2
      #      port:
      #        number: 80
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: myapp-service-v1
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: myapp-service-v2
            port:
              number: 80
